# FluentCards

./: .gitignore  .openpublishing.publish.config.json  AGENTS.md  CHANGELOG.md  Directory.Build.props  FluentCards.sln  LICENSE  README.md  docfx.json  generate-docs.sh  index.md  version.json
.copilot/: mcp-config.json
.squad/: .first-run  decisions.md  routing.md  team.md
docs/: ICON.md  api-node.md  api-python.md  go-patterns.md  index.md  (+3 more)
python/: .gitignore  README.md  pyproject.toml
python/fluent_cards/: models.py
python/fluent_cards/builders/: __init__.py  action_builder.py  adaptive_card_builder.py  authentication_builder.py  image_builder.py  media_builder.py  refresh_builder.py  text_run_builder.py
python/fluent_cards/builders/inputs/: input_choice_set_builder.py  input_number_builder.py  input_time_builder.py  input_toggle_builder.py
python/samples/: action_submit_execute_sample.py  basic_card_sample.py  form_card_sample.py  layout_card_sample.py  people_picker_sample.py  program.py  rich_content_sample.py  validation_sample.py
python/src/fluent_cards/: __init__.py  enums.py  models.py  serialization.py  teams.py  validation.py
python/src/fluent_cards/builders/: __init__.py  action_builder.py  action_set_builder.py  adaptive_card_builder.py  authentication_builder.py  background_image_builder.py  column_builder.py  column_set_builder.py  container_builder.py  fact_set_builder.py  image_builder.py  image_set_builder.py  media_builder.py  refresh_builder.py  rich_text_block_builder.py  table_builder.py  teams_card_properties_builder.py  teams_data_builder.py  teams_submit_properties_builder.py  text_block_builder.py  text_run_builder.py
python/src/fluent_cards/builders/inputs/: __init__.py  input_choice_set_builder.py  input_date_builder.py  input_number_builder.py  input_text_builder.py  input_time_builder.py  input_toggle_builder.py
python/tests/: test_actions.py  test_advanced.py  test_builder.py  test_elements.py  test_inputs.py  test_inputs_deep.py  test_schema_conformance.py  test_serialization.py  test_serialization_edge.py  test_teams.py  test_teams_features.py  test_validation.py
(+390 files in other folders)
