[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluent-cards"
version = "1.0.0"
description = "Fluent builder API for Adaptive Cards"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
