[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluent-cards"
version = "1.0.0"
description = "Fluent builder API for Adaptive Cards"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["adaptive-cards", "fluent", "builder", "cards", "microsoft-teams", "bot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rido-min/FluentCards"
Repository = "https://github.com/rido-min/FluentCards"
"Bug Tracker" = "https://github.com/rido-min/FluentCards/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pdoc>=14.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/fluent_cards"]

[tool.pytest.ini_options]
testpaths = ["tests"]
